--- a/mesa-de-trabalho/index.html
+++ b/mesa-de-trabalho/index.html
@@ -202,7 +202,7 @@
                 <input class="fomulario__campo" name="senha" minlength="6" id="senha" type="password"
                     placeholder="Pelo menos 6 caracteres" required>
                 <div id="box-alerta">
-                    <img id="icone_i" src="./imagens/icone.png" alt="Ícone de informação">
+                    <img id="icone_i" src="./imagens/icone.PNG" alt="Ícone de informação">
                     <span class="alerta">As senhas devem ter pelo menos 6 caracteres.</span>
                 </div>
 
