--- a/mesa-de-trabalho/index.html
+++ b/mesa-de-trabalho/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
-    <title>Mesa de trabalho</title>
+    <title>Amazon Login - DH</title>
     <style type="text/css">
         /* Adicione o código fonte de estilização */
         * {
